Cleaning up deps., resetting to old state