@@ -29,15 +29,6 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
-    testOptions {
-        unitTests.includeAndroidResources  = true
-        unitTests.returnDefaultValues = true
-    }
-
-}
-tasks.withType(Test) {
-    jvmArgs('--add-opens=java.base/java.lang=ALL-UNNAMED')
 }
 
 dependencies {
@@ -46,17 +37,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition-common:19.0.0'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    testImplementation "androidx.arch.core:core-testing:2.1.0"
-    // Optional -- Mockito framework
-    testImplementation 'org.mockito:mockito-core:1.10.19'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
 
 
